# chatbotmac

./: .gitignore  AGENTS.MD  README.md  docker-compose.yml
.cursor/rules/: architecture.mdc
agent/: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml
agent/app/: __init__.py  agent.py  main.py
agent/app/models/: database.py  schemas.py
agent/app/rag/: embeddings.py  supabase_client.py
agent/app/routes/: chat.py  conversations.py  health.py  suggestions.py
agent/app/services/: chat_service.py  conversation_service.py  suggestion_service.py
agent/app/tools/: rag_tool.py  web_search.py
agent/app/utils/: message_formatter.py
agent/migrations/: 001_create_conversations_tables.sql  supabase_setup.sql
agent/scripts/: eval_dataset.json  evaluators.py  populate_facts.py  run_eval.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: MarkdownContent.tsx  ToolCallDisplay.tsx
frontend/app/hooks/: index.ts  useChatAgent.ts  useClearHistory.ts  useConversationHistory.ts  useMessageSync.ts  useSuggestions.ts
frontend/app/store/: chatStore.ts
frontend/app/types/: chat.ts
frontend/app/utils/: conversation.ts  sse.ts
